force-app/main/default/objects/phsGoals__c/phsGoals__c.object-meta.xml
<CustomObject>
    <label>phsGoals</label>
    <nameField>
        <label>phsGoals Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>phsGoals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>