force-app/main/default/objects/phsGoals__c/fields/FocusAreaId__c.field-meta.xml
<CustomField>
    <fullName>FocusAreaId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Foreign key to Object FocusArea</description>
    <label>FocusAreaId</label>
    <referenceTo>phsFocusArea__c</referenceTo>
    <relationshipLabel>phsGoals</relationshipLabel>
    <relationshipName>phsGoals</relationshipName>
    <type>Lookup</type>
</CustomField>