force-app/main/default/objects/phsGoals__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Name of the goal</description>
    <label>Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>