force-app/main/default/objects/phsGoals__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Name__c</columns>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>FocusAreaId__c</columns>
    <columns>Role__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>